# DataEngOS

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  package-lock.json  package.json  pyproject.toml
.agent/scratch/: temp_report.md
.agent/skills/deep-research/: SKILL.md
.agent/workflows/: deep-research.md
.streamlit/: config.toml
core/.agent-os/memory/: context_schema.json
core/.agent-os/persona/: architect_system.md  tone_guidelines.json
core/global_governance/: naming-conventions.json  naming-project.json  stack.md
core/prompts/: ___TEMP.md  system_bootloader.md  system_kernel.md
dataeng_os/: config.py  main.py
dataeng_os/commands/: init.py  scaffold.py  validate.py
dataeng_os/models/: odcs.py
dataeng_os/ui/: architect.py  i18n_helper.py  main.py  styles.css
dataeng_os/ui/components/: lineage.py  (+1 more)
design-system/: MASTER.md
docs/: EVOLUTION_STRATEGY_v3.md  MIGRATION_GUIDE_v2.md  ROADMAP.md  TOON_USAGE.md
docs/.base_docs/: DATAENGOS_v2_ENTERPRISE_EVOLUTION.md  Playbook continuo DataEngOS.md
docs/researchs/: 2026-01-24_validation_spike_dataengos_technical_foundation.md
global_governance/: naming.json  stack-standards.md
implementation/dbt/: dbt_project.yml
scripts/: gatekeeper.py  setup_dev.sh  verify_architect.py
specs/governance/: classification.yaml
specs/product-canvas/: slas.yaml  vision.md
src/dataeng_os/: config.py
src/dataeng_os_cli/: __init__.py
templates/: e_commerce_transaction.yaml
~/ag-profile/: Consent To Send Stats  CrashpadMetrics-active.pma  Local State  SingletonCookie  SingletonLock  SingletonSocket
(+1294 files in other folders)
